; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_create_tracks_from_response.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_create_tracks_from_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { %struct.TYPE_10__*, %struct.TYPE_11__* }
%struct.TYPE_10__ = type { i8* }
%struct.TYPE_11__ = type { i32* }
%struct.TYPE_14__ = type { i8*, i32 }

@CONTENT_PSEUDOHEADER_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"RTSP: Content missing\00", align 1
@VC_CONTAINER_ERROR_FORMAT_INVALID = common dso_local global i32 0, align 4
@CONTENT_BASE_NAME = common dso_local global i32 0, align 4
@CONTENT_LOCATION_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_13__*)* @rtsp_create_tracks_from_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtsp_create_tracks_from_response(%struct.TYPE_13__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_13__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_14__, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %3, align 8
  %8 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %4, align 8
  %15 = load i32, i32* @CONTENT_PSEUDOHEADER_NAME, align 4
  %16 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 1
  store i32 %15, i32* %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @vc_containers_list_find_entry(i32* %17, %struct.TYPE_14__* %5)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %1
  %21 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %22 = call i32 @LOG_ERROR(%struct.TYPE_13__* %21, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* @VC_CONTAINER_ERROR_FORMAT_INVALID, align 4
  store i32 %23, i32* %2, align 4
  br label %58

24:                                               ; preds = %1
  %25 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  store i8* %26, i8** %7, align 8
  %27 = load i32, i32* @CONTENT_BASE_NAME, align 4
  %28 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 1
  store i32 %27, i32* %28, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i64 @vc_containers_list_find_entry(i32* %29, %struct.TYPE_14__* %5)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %24
  %33 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  store i8* %34, i8** %6, align 8
  br label %53

35:                                               ; preds = %24
  %36 = load i32, i32* @CONTENT_LOCATION_NAME, align 4
  %37 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 1
  store i32 %36, i32* %37, align 8
  %38 = load i32*, i32** %4, align 8
  %39 = call i64 @vc_containers_list_find_entry(i32* %38, %struct.TYPE_14__* %5)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %35
  %42 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %5, i32 0, i32 0
  %43 = load i8*, i8** %42, align 8
  store i8* %43, i8** %6, align 8
  br label %52

44:                                               ; preds = %35
  %45 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %46 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %45, i32 0, i32 0
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i32 0, i32 0
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 0
  %51 = load i8*, i8** %50, align 8
  store i8* %51, i8** %6, align 8
  br label %52

52:                                               ; preds = %44, %41
  br label %53

53:                                               ; preds = %52, %32
  %54 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %55 = load i8*, i8** %7, align 8
  %56 = load i8*, i8** %6, align 8
  %57 = call i32 @rtsp_create_tracks_from_sdp(%struct.TYPE_13__* %54, i8* %55, i8* %56)
  store i32 %57, i32* %2, align 4
  br label %58

58:                                               ; preds = %53, %20
  %59 = load i32, i32* %2, align 4
  ret i32 %59
}

declare dso_local i64 @vc_containers_list_find_entry(i32*, %struct.TYPE_14__*) #1

declare dso_local i32 @LOG_ERROR(%struct.TYPE_13__*, i8*) #1

declare dso_local i32 @rtsp_create_tracks_from_sdp(%struct.TYPE_13__*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
